@@ -33,6 +33,7 @@ var localized_strings,
 			options_friends_rec: "Items Your Friends Recommend",
 			options_header: "Header",
 			options_hide_install: "Hide \"Install Steam\" button",
+            options_hidetmsymbols: "Trademark Symbols in Game Titles",
 			options_send_age_info: "Automatically send age verification when requested",
 			options_contscroll: "Enable Continuous Scrolling of Search Results",
 			options_drm: "Show 3rd Party DRM Warnings",
