@@ -197,10 +197,8 @@
 					</li>
 				</div>
 				<li class="header" id="hide_text">Hide</li>
-				<li>
-					<input type="checkbox" id="hide_owned">
-					<label for="hide_owned" id="hide_owned_text">Items You Own</label>
-				</li>
+				<li><input type="checkbox" id="hide_owned"><label for="hide_owned" id="hide_owned_text">Items You Own</label></li>
+				<li><input type="checkbox" id="hidetmsymbols"><label for="hidetmsymbols" id="hidetmsymbols_text">Trademark Symbols in Game Titles</label></li>
 				<li class="header" id="library_text">Library (BETA)</li>
 				<li><input type="checkbox" id="showlibrarymenu"><label for="showlibrarymenu" id="store_show_library_text">Show Library button in header</label></li>
 				<li><input type="checkbox" id="showlibraryf2p"><label for="showlibraryf2p" id="store_show_library_f2p_text">Show played free to play games and demos in library</label></li>
